@@ -6,12 +6,12 @@ import re
 import sys
 from pathlib import Path
 
-VERSION = "4.3"
+VERSION = "5.0"
 
 parser = argparse.ArgumentParser(description="Log file parser for continuous spawning logs.", formatter_class=argparse.ArgumentDefaultsHelpFormatter)
 parser.add_argument("logs", nargs='*', help="Log files to parse. If none are given, the latest log file is parsed.")
 parser.add_argument("-n", "--no-file", action='store_true', help="Don't create a csv file.")
-parser.add_argument("-w", "--weights", type=str, default="3,1.5,-1,4e-3,1e-4,4e-5,0.035,6e-4,1.5e-4, 5e-5,0.15,2e-3,3e-5,1.5e-5,0.075,0,0,0", help="Score weights.")
+parser.add_argument("-w", "--weights", type=str, default="3,1.5,-1,4e-3,1e-4,4e-5,0.01,5e-4,1e-4,4e-5,0.15,2e-3,3e-5,1.5e-5,0.075,0,0,0", help="Score weights.")
 parser.add_argument("--show-weights", action='store_true', help="Show the score weights.")
 parser.add_argument("-s", "--separately", action='store_true', help="Show the results of each log separately (for multiple logs).")
 parser.add_argument("--version", action='store_true', help="Show the script version, then exit.")
