@@ -8,7 +8,7 @@ from collections import Counter
 from pathlib import Path
 from typing import Union
 
-VERSION = "1.2"
+VERSION = "2.0"
 
 parser = argparse.ArgumentParser(description="Parse results.json of a N-choose-K style tournament producing a table of who-beat-who.", formatter_class=argparse.ArgumentDefaultsHelpFormatter, epilog="Note: this also works on FFA style tournaments, but may not be meaningful.")
 parser.add_argument('results', type=str, nargs='?', help="results.json file to parse.")
