@@ -494,10 +494,10 @@ namespace BDArmory.VesselSpawning
             {"Hits",                    0.004f},
             {"Bullet Damage",           0.0001f},
             {"Bullet Damage Taken",     4e-05f},
-            {"Rocket Hits",             0.035f},
-            {"Rocket Parts Hit",        0.0006f},
-            {"Rocket Damage",           0.00015f},
-            {"Rocket Damage Taken",     5e-05f},
+            {"Rocket Hits",             0.01f},
+            {"Rocket Parts Hit",        0.0005f},
+            {"Rocket Damage",           0.0001f},
+            {"Rocket Damage Taken",     4e-05f},
             {"Missile Hits",            0.15f},
             {"Missile Parts Hit",       0.002f},
             {"Missile Damage",          3e-05f},
