@@ -15,6 +15,8 @@
 	- Fix weapon custom belt behavior.
 	- Missiles:
 		- Added "hasIFF" field to missiles allowing for missile seekers without IFF functionality. Defaults to true.
+- Competition:
+	- Adjust the default score weights for rockets to be more inline with that of bullets.
 
 v1.9.0.0
 IMPROVEMENTS / FIXES
